# Arduino33BLE_Templet_Clion

./: .gitignore  CMakeLists.txt  nordic_nrf52_dk.cfg
Core/src/: main.cpp
framework-arduino-mbed/: .piopm  package.json
framework/ARDUINO_NANO33BLE/: linker_script.ld
framework/cores/arduino/api/: Print.cpp
libraries/Wire/: Wire.h
