cmake_minimum_required(VERSION 3.13)
set(CMAKE_SYSTEM_NAME Generic)
#set(CMAKE_C_COMPILER_WORKS 1)
#set(CMAKE_CXX_COMPILER_WORKS 1)

project(Arduino_Templet C CXX ASM)

SET(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 14)

set(CLION_SVD_FILE_PATH "nrf52840.svd" CACHE FILEPATH "Peripheral Registers Definitions File" FORCE)

set(CMAKE_C_COMPILER arm-none-eabi-g++)
set(CMAKE_CXX_COMPILER arm-none-eabi-g++)
set(CMAKE_ASM_COMPILER arm-none-eabi-g++)
set(CMAKE_AR arm-none-eabi-ar)
set(CMAKE_OBJCOPY arm-none-eabi-objcopy)
set(CMAKE_OBJDUMP arm-none-eabi-objdump)
set(SIZE arm-none-eabi-size)
#set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)

add_compile_options(-mcpu=cortex-m4 -mfloat-abi=softfp -mfpu=fpv4-sp-d16 -mthumb)
add_compile_options(-Wvla -Wall -Wextra -Wno-missing-field-initializers -Wno-unused-parameter)
add_compile_options(-fno-rtti -fdata-sections -ffunction-sections -fmessage-length=0)
add_compile_options(-fno-exceptions -fomit-frame-pointer -funsigned-char)
add_compile_options(-Os -g -nostdlib)

add_definitions(-DAPPLICATION_ADDR=0x10000 -DAPPLICATION_SIZE=0xf0000)
add_definitions(-DMBED_RAM_SIZE=0x40000 -DMBED_RAM_START=0x20000000)
add_definitions(-DMBED_ROM_SIZE=0x100000 -DMBED_ROM_START=0x0)
add_definitions(-DMBED_TRAP_ERRORS_ENABLED=1)

include_directories(framework/cores/arduino)
include_directories(framework/ARDUINO_NANO33BLE)
include_directories(Core/inc)

include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/modules/softdevice/common)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/modules/softdevice)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/modules/nrfx/soc)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/modules/nrfx/mdk)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/modules/nrfx/hal)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/modules/nrfx/drivers/src/prs)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/modules/nrfx/drivers/src)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/modules/nrfx/drivers/include)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/modules/nrfx/drivers)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/modules/nrfx)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/modules)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/integration/nrfx/legacy/ble_flash)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/integration/nrfx/legacy)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/integration/nrfx)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/integration)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries/util)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries/twi_mngr)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries/strerror)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries/spi_mngr)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries/queue)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries/fstorage)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries/fds)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries/experimental_section_vars)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries/experimental_memobj)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries/experimental_log/src)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries/experimental_log)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries/delay)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries/balloc)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries/atomic_fifo)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries/atomic)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components/libraries)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/components)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/TARGET_SOFTDEVICE_NONE/nrf_soc_nosd)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/TARGET_SOFTDEVICE_NONE/libraries/fstorage)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/TARGET_SOFTDEVICE_NONE/libraries)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0/TARGET_SOFTDEVICE_NONE)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_SDK_15_0)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/TARGET_MCU_NRF52840/device)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/TARGET_MCU_NRF52840/config)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/TARGET_MCU_NRF52840/TARGET_ARDUINO_NANO33BLE)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/TARGET_MCU_NRF52840)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC/TARGET_NRF5x)
include_directories(framework/cores/arduino/mbed/targets/TARGET_NORDIC)
include_directories(framework/cores/arduino/mbed/rtos/source/TARGET_CORTEX/rtx5/RTX/Source)
include_directories(framework/cores/arduino/mbed/rtos/source/TARGET_CORTEX/rtx5/RTX/Include)
include_directories(framework/cores/arduino/mbed/rtos/source/TARGET_CORTEX/rtx5/RTX/Config)
include_directories(framework/cores/arduino/mbed/rtos/source/TARGET_CORTEX/rtx5/RTX)
include_directories(framework/cores/arduino/mbed/rtos/source/TARGET_CORTEX/rtx5/Include)
include_directories(framework/cores/arduino/mbed/rtos/source/TARGET_CORTEX/rtx5)
include_directories(framework/cores/arduino/mbed/rtos/source/TARGET_CORTEX/rtx4)
include_directories(framework/cores/arduino/mbed/rtos/source/TARGET_CORTEX)
include_directories(framework/cores/arduino/mbed/rtos/source)
include_directories(framework/cores/arduino/mbed/rtos)
include_directories(framework/cores/arduino/mbed/platform/source/minimal-printf)
include_directories(framework/cores/arduino/mbed/platform/source)
include_directories(framework/cores/arduino/mbed/platform/internal)
include_directories(framework/cores/arduino/mbed/platform/cxxsupport)
include_directories(framework/cores/arduino/mbed/platform)
include_directories(framework/cores/arduino/mbed/hal/usb)
include_directories(framework/cores/arduino/mbed/hal)
include_directories(framework/cores/arduino/mbed/features/storage/kvstore/tdbstore)
include_directories(framework/cores/arduino/mbed/features/storage/kvstore/securestore)
include_directories(framework/cores/arduino/mbed/features/storage/kvstore/kv_map)
include_directories(framework/cores/arduino/mbed/features/storage/kvstore/include)
include_directories(framework/cores/arduino/mbed/features/storage/kvstore/global_api)
include_directories(framework/cores/arduino/mbed/features/storage/kvstore/filesystemstore)
include_directories(framework/cores/arduino/mbed/features/storage/kvstore/direct_access_devicekey)
include_directories(framework/cores/arduino/mbed/features/storage/kvstore/conf)
include_directories(framework/cores/arduino/mbed/features/storage/kvstore)
include_directories(framework/cores/arduino/mbed/features/storage/filesystem/littlefsv2/littlefs)
include_directories(framework/cores/arduino/mbed/features/storage/filesystem/littlefsv2)
include_directories(framework/cores/arduino/mbed/features/storage/filesystem/littlefs/littlefs)
include_directories(framework/cores/arduino/mbed/features/storage/filesystem/littlefs)
include_directories(framework/cores/arduino/mbed/features/storage/filesystem/fat/ChaN)
include_directories(framework/cores/arduino/mbed/features/storage/filesystem/fat)
include_directories(framework/cores/arduino/mbed/features/storage/filesystem)
include_directories(framework/cores/arduino/mbed/features/storage/blockdevice)
include_directories(framework/cores/arduino/mbed/features/storage)
include_directories(framework/cores/arduino/mbed/features/nfc/stack/transceiver/pn512)
include_directories(framework/cores/arduino/mbed/features/nfc/stack/transceiver)
include_directories(framework/cores/arduino/mbed/features/nfc/stack/tech/type4)
include_directories(framework/cores/arduino/mbed/features/nfc/stack/tech/isodep)
include_directories(framework/cores/arduino/mbed/features/nfc/stack/tech/iso7816)
include_directories(framework/cores/arduino/mbed/features/nfc/stack/tech)
include_directories(framework/cores/arduino/mbed/features/nfc/stack/platform)
include_directories(framework/cores/arduino/mbed/features/nfc/stack/ndef)
include_directories(framework/cores/arduino/mbed/features/nfc/stack)
include_directories(framework/cores/arduino/mbed/features/nfc/nfc/ndef/common)
include_directories(framework/cores/arduino/mbed/features/nfc/nfc/ndef)
include_directories(framework/cores/arduino/mbed/features/nfc/nfc)
include_directories(framework/cores/arduino/mbed/features/nfc/controllers)
include_directories(framework/cores/arduino/mbed/features/nfc/acore/acore)
include_directories(framework/cores/arduino/mbed/features/nfc/acore)
include_directories(framework/cores/arduino/mbed/features/nfc)
include_directories(framework/cores/arduino/mbed/features/netsocket/ppp/include/polarssl)
include_directories(framework/cores/arduino/mbed/features/netsocket/ppp/include)
include_directories(framework/cores/arduino/mbed/features/netsocket/ppp)
include_directories(framework/cores/arduino/mbed/features/netsocket)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/libNET/src)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/libNET)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/libDHCPv6)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/ipv6_stack)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/configs/base)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/configs)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/whiteboard)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/utils)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/pan_blacklist)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/nist_aes_kw)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/nd_proxy)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/mle_service)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/stack)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/serial)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/poll)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/mdns)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services/dns)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/services)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/port/cpu)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/port/compiler)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack/port)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/mdns/fnet/fnet_stack)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/mdns/fnet)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/mdns)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/mac_neighbor_table)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/load_balance)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/ieee_802_11)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/hmac)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/fnv_hash)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/fhss)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/etx)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/blacklist)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/Trickle)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs/Neighbor_cache)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Service_Libs)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Security/protocols/tls_sec_prot)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Security/protocols/key_sec_prot)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Security/protocols/gkh_sec_prot)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Security/protocols/fwh_sec_prot)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Security/protocols/eap_tls_sec_prot)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Security/protocols)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Security/kmp)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Security/eapol)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Security/TLS)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Security/PANA)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Security/Common)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Security)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/RPL)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/NWK_INTERFACE/Include)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/NWK_INTERFACE)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/MPL)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/MLE)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/MAC/virtual_rf)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/MAC/IEEE802_15_4)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/MAC)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/DHCPv6_client)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/DHCPv6_Server)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Core/include)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Core)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/Common_Protocols)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/BorderRouter)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/6LoWPAN/ws)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/6LoWPAN/Thread)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/6LoWPAN/NVM)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/6LoWPAN/ND)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/6LoWPAN/Mesh)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/6LoWPAN/MAC)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/6LoWPAN/IPHC_Decode)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/6LoWPAN/Fragmentation)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/6LoWPAN/Bootstraps)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source/6LoWPAN)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/source)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/nanostack/platform)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack/nanostack)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack-eventloop/source)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack-eventloop/nanostack-event-loop/platform)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack-eventloop/nanostack-event-loop)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack-eventloop)
include_directories(framework/cores/arduino/mbed/features/nanostack/sal-stack-nanostack)
include_directories(framework/cores/arduino/mbed/features/nanostack/nanostack-interface)
include_directories(framework/cores/arduino/mbed/features/nanostack/nanostack-hal-mbed-cmsis-rtos)
include_directories(framework/cores/arduino/mbed/features/nanostack/mbed-mesh-api/source/include)
include_directories(framework/cores/arduino/mbed/features/nanostack/mbed-mesh-api/source)
include_directories(framework/cores/arduino/mbed/features/nanostack/mbed-mesh-api/mbed-mesh-api)
include_directories(framework/cores/arduino/mbed/features/nanostack/mbed-mesh-api)
include_directories(framework/cores/arduino/mbed/features/nanostack/coap-service/source/include)
include_directories(framework/cores/arduino/mbed/features/nanostack/coap-service/source)
include_directories(framework/cores/arduino/mbed/features/nanostack/coap-service/coap-service)
include_directories(framework/cores/arduino/mbed/features/nanostack/coap-service)
include_directories(framework/cores/arduino/mbed/features/nanostack)
include_directories(framework/cores/arduino/mbed/features/mbedtls/platform/inc)
include_directories(framework/cores/arduino/mbed/features/mbedtls/platform)
include_directories(framework/cores/arduino/mbed/features/mbedtls/inc/mbedtls)
include_directories(framework/cores/arduino/mbed/features/mbedtls/inc)
include_directories(framework/cores/arduino/mbed/features/mbedtls)
include_directories(framework/cores/arduino/mbed/features/lwipstack/lwip/src/include/netif)
include_directories(framework/cores/arduino/mbed/features/lwipstack/lwip/src/include/lwip/prot)
include_directories(framework/cores/arduino/mbed/features/lwipstack/lwip/src/include/lwip/priv)
include_directories(framework/cores/arduino/mbed/features/lwipstack/lwip/src/include/lwip)
include_directories(framework/cores/arduino/mbed/features/lwipstack/lwip/src/include/compat/posix/sys)
include_directories(framework/cores/arduino/mbed/features/lwipstack/lwip/src/include/compat/posix/net)
include_directories(framework/cores/arduino/mbed/features/lwipstack/lwip/src/include/compat/posix/arpa)
include_directories(framework/cores/arduino/mbed/features/lwipstack/lwip/src/include/compat/posix)
include_directories(framework/cores/arduino/mbed/features/lwipstack/lwip/src/include/compat)
include_directories(framework/cores/arduino/mbed/features/lwipstack/lwip/src/include)
include_directories(framework/cores/arduino/mbed/features/lwipstack/lwip/src)
include_directories(framework/cores/arduino/mbed/features/lwipstack/lwip-sys/arch)
include_directories(framework/cores/arduino/mbed/features/lwipstack/lwip-sys)
include_directories(framework/cores/arduino/mbed/features/lwipstack/lwip)
include_directories(framework/cores/arduino/mbed/features/lwipstack)
include_directories(framework/cores/arduino/mbed/features/lorawan/system)
include_directories(framework/cores/arduino/mbed/features/lorawan/lorastack/phy)
include_directories(framework/cores/arduino/mbed/features/lorawan/lorastack/mac)
include_directories(framework/cores/arduino/mbed/features/lorawan/lorastack)
include_directories(framework/cores/arduino/mbed/features/lorawan)
include_directories(framework/cores/arduino/mbed/features/frameworks/utest/utest)
include_directories(framework/cores/arduino/mbed/features/frameworks/utest)
include_directories(framework/cores/arduino/mbed/features/frameworks/unity/unity)
include_directories(framework/cores/arduino/mbed/features/frameworks/unity)
include_directories(framework/cores/arduino/mbed/features/frameworks/nanostack-libservice/mbed-client-libservice/platform)
include_directories(framework/cores/arduino/mbed/features/frameworks/nanostack-libservice/mbed-client-libservice)
include_directories(framework/cores/arduino/mbed/features/frameworks/nanostack-libservice)
include_directories(framework/cores/arduino/mbed/features/frameworks/mbed-trace/mbed-trace)
include_directories(framework/cores/arduino/mbed/features/frameworks/mbed-trace)
include_directories(framework/cores/arduino/mbed/features/frameworks/mbed-coap/source/include)
include_directories(framework/cores/arduino/mbed/features/frameworks/mbed-coap/source)
include_directories(framework/cores/arduino/mbed/features/frameworks/mbed-coap/mbed-coap)
include_directories(framework/cores/arduino/mbed/features/frameworks/mbed-coap)
include_directories(framework/cores/arduino/mbed/features/frameworks/mbed-client-randlib/mbed-client-randlib/platform)
include_directories(framework/cores/arduino/mbed/features/frameworks/mbed-client-randlib/mbed-client-randlib)
include_directories(framework/cores/arduino/mbed/features/frameworks/mbed-client-randlib)
include_directories(framework/cores/arduino/mbed/features/frameworks/mbed-client-cli/mbed-client-cli)
include_directories(framework/cores/arduino/mbed/features/frameworks/mbed-client-cli)
include_directories(framework/cores/arduino/mbed/features/frameworks/greentea-client/greentea-client)
include_directories(framework/cores/arduino/mbed/features/frameworks/greentea-client)
include_directories(framework/cores/arduino/mbed/features/frameworks)
include_directories(framework/cores/arduino/mbed/features/device_key/source)
include_directories(framework/cores/arduino/mbed/features/device_key)
include_directories(framework/cores/arduino/mbed/features/cryptocell/FEATURE_CRYPTOCELL310/include)
include_directories(framework/cores/arduino/mbed/features/cryptocell/FEATURE_CRYPTOCELL310/TARGET_MCU_NRF52840)
include_directories(framework/cores/arduino/mbed/features/cryptocell/FEATURE_CRYPTOCELL310)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/UBLOX/PPP)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/UBLOX/N2XX)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/UBLOX/AT)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/UBLOX)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/TELIT/ME910)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/TELIT/ME310)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/TELIT/HE910)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/TELIT)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/RiotMicro/AT)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/RiotMicro)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/QUECTEL/UG96)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/QUECTEL/M26)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/QUECTEL/EC2X)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/QUECTEL/BG96)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/QUECTEL/BC95)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/QUECTEL)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/MultiTech/DragonflyNano/PPP)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/MultiTech/DragonflyNano)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/MultiTech)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/GENERIC/GENERIC_AT3GPP)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/GENERIC)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/GEMALTO/CINTERION)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/GEMALTO)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/Altair/ALT1250/PPP)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/Altair/ALT1250)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets/Altair)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/targets)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/device)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/common)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/AT)
include_directories(framework/cores/arduino/mbed/features/cellular/framework/API)
include_directories(framework/cores/arduino/mbed/features/cellular/framework)
include_directories(framework/cores/arduino/mbed/features/cellular)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_NORDIC/TARGET_NORDIC_CORDIO/TARGET_NRF5x)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack_adaptation)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/thirdparty/uecc)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/thirdparty/nordic-bsp/components/boards)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/thirdparty/nordic-bsp/components)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/thirdparty/nordic-bsp)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/thirdparty)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/controller/sources/common/sch)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/controller/sources/common/bb)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/controller/sources/common)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/controller/sources/ble/sch)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/controller/sources/ble/lhci)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/controller/sources/ble/lctr)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/controller/sources/ble/include)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/controller/sources/ble/bb)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/controller/sources/ble)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/controller/sources)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/controller/include/common)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/controller/include/ble)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/controller/include)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack/controller)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL/stack)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO_LL)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack_adaptation)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/wsf/include/util)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/wsf/include)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/wsf)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/platform/include)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/platform)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/ble-host/sources/stack/smp)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/ble-host/sources/stack/l2c)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/ble-host/sources/stack/hci)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/ble-host/sources/stack/dm)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/ble-host/sources/stack/cfg)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/ble-host/sources/stack/att)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/ble-host/sources/stack)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/ble-host/sources/sec/common)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/ble-host/sources/sec)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/ble-host/sources/hci/dual_chip)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/ble-host/sources/hci)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/ble-host/sources)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/ble-host/include)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack/ble-host)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/stack)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/source)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO/driver)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/targets/TARGET_CORDIO)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/source/generic)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/source/gap)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/source)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/ble/services)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/ble/pal)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/ble/generic)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/ble/gap)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/ble/common)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE/ble)
include_directories(framework/cores/arduino/mbed/features/FEATURE_BLE)
include_directories(framework/cores/arduino/mbed/features)
include_directories(framework/cores/arduino/mbed/events/internal)
include_directories(framework/cores/arduino/mbed/events)
include_directories(framework/cores/arduino/mbed/drivers/internal)
include_directories(framework/cores/arduino/mbed/drivers)
include_directories(framework/cores/arduino/mbed/components/wifi/esp8266-driver/ESP8266)
include_directories(framework/cores/arduino/mbed/components/wifi/esp8266-driver)
include_directories(framework/cores/arduino/mbed/components/wifi)
include_directories(framework/cores/arduino/mbed/components/storage/blockdevice/COMPONENT_FLASHIAP/COMMON)
include_directories(framework/cores/arduino/mbed/components/storage/blockdevice/COMPONENT_FLASHIAP)
include_directories(framework/cores/arduino/mbed/components/802.15.4_RF/stm-s2lp-rf-driver/stm-s2lp-rf-driver)
include_directories(framework/cores/arduino/mbed/components/802.15.4_RF/stm-s2lp-rf-driver/source)
include_directories(framework/cores/arduino/mbed/components/802.15.4_RF/stm-s2lp-rf-driver)
include_directories(framework/cores/arduino/mbed/components/802.15.4_RF/mcr20a-rf-driver/source)
include_directories(framework/cores/arduino/mbed/components/802.15.4_RF/mcr20a-rf-driver/mcr20a-rf-driver)
include_directories(framework/cores/arduino/mbed/components/802.15.4_RF/mcr20a-rf-driver)
include_directories(framework/cores/arduino/mbed/components/802.15.4_RF/atmel-rf-driver/source)
include_directories(framework/cores/arduino/mbed/components/802.15.4_RF/atmel-rf-driver/atmel-rf-driver)
include_directories(framework/cores/arduino/mbed/components/802.15.4_RF/atmel-rf-driver)
include_directories(framework/cores/arduino/mbed/components/802.15.4_RF)
include_directories(framework/cores/arduino/mbed/components)
include_directories(framework/cores/arduino/mbed/cmsis/TARGET_CORTEX_M)
include_directories(framework/cores/arduino/mbed/cmsis)
include_directories(framework/cores/arduino/mbed)


#SET(CMAKE_CXX_FLAGS "-Wvla -fno-rtti -std=gnu++14 -DAPPLICATION_ADDR=0x10000 -DAPPLICATION_SIZE=0xf0000
#-DMBED_RAM_SIZE=0x40000 -DMBED_RAM_START=0x20000000 -DMBED_ROM_SIZE=0x100000 -DMBED_ROM_START=0x0
#-DMBED_TRAP_ERRORS_ENABLED=1 -Os -Wall -Wextra -Wno-missing-field-initializers -Wno-unused-parameter
#-c -fdata-sections -ffunction-sections -fmessage-length=0 -fno-exceptions -fomit-frame-pointer
#-funsigned-char -g -mcpu=cortex-m4 -mfloat-abi=softfp -mfpu=fpv4-sp-d16 -mthumb
#-iprefix$ENV{HOME}/.platformio/packages/framework-arduino-mbed/cores/arduino
#@$ENV{HOME}/.platformio/packages/framework-arduino-mbed/variants/ARDUINO_NANO33BLE/includes.txt
#-nostdlib")
#
#SET(CMAKE_C_FLAGS "-std=gnu11 -DAPPLICATION_ADDR=0x10000 -DAPPLICATION_SIZE=0xf0000
#-DMBED_RAM_SIZE=0x40000 -DMBED_RAM_START=0x20000000 -DMBED_ROM_SIZE=0x100000 -DMBED_ROM_START=0x0
#-DMBED_TRAP_ERRORS_ENABLED=1 -Os -Wall -Wextra -Wno-missing-field-initializers -Wno-unused-parameter
#-c -fdata-sections -ffunction-sections -fmessage-length=0 -fno-exceptions -fomit-frame-pointer
#-funsigned-char -g -mcpu=cortex-m4 -mfloat-abi=softfp -mfpu=fpv4-sp-d16 -mthumb
#-iprefix$ENV{HOME}/.platformio/packages/framework-arduino-mbed/cores/arduino
#@$ENV{HOME}/.platformio/packages/framework-arduino-mbed/variants/ARDUINO_NANO33BLE/includes.txt
#-nostdlib")


add_definitions(-DPLATFORMIO=50100)
add_definitions(-DARDUINO_ARDUINO_NANO33BLE)
add_definitions(-DARDUINO_ARCH_NRF52840)
add_definitions(-DARM_MATH_CM4)
add_definitions(-DBOARD_PCA10056)
add_definitions(-D__CMSIS_RTOS)
add_definitions(-DCMSIS_VECTAB_VIRTUAL)
add_definitions(-DCMSIS_VECTAB_VIRTUAL_HEADER_FILE=\"cmsis_nvic.h\")
add_definitions(-DCOMPONENT_FLASHIAP=1)
add_definitions(-DCONFIG_GPIO_AS_PINRESET)
add_definitions(-D__CORTEX_M4)
add_definitions(-DDEVICE_ANALOGIN=1)
add_definitions(-DDEVICE_FLASH=1)
add_definitions(-DDEVICE_I2C=1)
add_definitions(-DDEVICE_I2C_ASYNCH=1)
add_definitions(-DDEVICE_I2CSLAVE=1)
add_definitions(-DDEVICE_INTERRUPTIN=1)
add_definitions(-DDEVICE_LPTICKER=1)
add_definitions(-DDEVICE_PORTIN=1)
add_definitions(-DDEVICE_PORTINOUT=1)
add_definitions(-DDEVICE_PORTOUT=1)
add_definitions(-DDEVICE_PWMOUT=1)
add_definitions(-DDEVICE_SERIAL=1)
add_definitions(-DDEVICE_SERIAL_ASYNCH=1)
add_definitions(-DDEVICE_SERIAL_FC=1)
add_definitions(-DDEVICE_SLEEP=1)
add_definitions(-DDEVICE_SPI=1)
add_definitions(-DDEVICE_SPI_ASYNCH=1)
add_definitions(-DDEVICE_SYSTICK_CLK_OFF_DURING_SLEEP=1)
add_definitions(-DDEVICE_TRNG=1)
add_definitions(-DDEVICE_USBDEVICE=1)
add_definitions(-DDEVICE_USTICKER=1)
add_definitions(-DFEATURE_BLE=1)
add_definitions(-DFEATURE_CRYPTOCELL310=1)
add_definitions(-DFEATURE_STORAGE=1)
add_definitions(-D__FPU_PRESENT=1)
add_definitions(-D__MBED__=1)
add_definitions(-DMBED_BUILD_TIMESTAMP=1595839671.5680196)
add_definitions(-D__MBED_CMSIS_RTOS_CM)
add_definitions(-DMBED_MPU_CUSTOM)
add_definitions(-DMBED_TICKLESS)
add_definitions(-DMBEDTLS_CONFIG_HW_SUPPORT)
add_definitions(-DNRF52840_XXAA)
add_definitions(-DNRF52_PAN_20)
add_definitions(-DSWI_DISABLE0)
add_definitions(-DTARGET_ARDUINO_NANO33BLE)
add_definitions(-DTARGET_CORDIO)
add_definitions(-DTARGET_CORDIO_LL)
add_definitions(-DTARGET_CORTEX)
add_definitions(-DTARGET_CORTEX_M)
add_definitions(-DTARGET_LIKE_CORTEX_M4)
add_definitions(-DTARGET_LIKE_MBED)
add_definitions(-DTARGET_M4)
add_definitions(-DTARGET_MCU_NRF52840)
add_definitions(-DTARGET_NAME=ARDUINO_NANO33BLE)
add_definitions(-DTARGET_NORDIC)
add_definitions(-DTARGET_NORDIC_CORDIO)
add_definitions(-DTARGET_NRF52)
add_definitions(-DTARGET_NRF52840)
add_definitions(-DTARGET_NRF5x)
add_definitions(-DTARGET_RELEASE)
add_definitions(-DTARGET_RTOS_M4_M7)
add_definitions(-DTARGET_SDK_15_0)
add_definitions(-DTARGET_SOFTDEVICE_NONE)
add_definitions(-DTOOLCHAIN_GCC)
add_definitions(-DTOOLCHAIN_GCC_ARM)
add_definitions(-DWSF_MAX_HANDLERS=10)
add_definitions(-DMBED_NO_GLOBAL_USING_DIRECTIVE=1)
add_definitions(-DUSE_ARDUINO_PINOUT)
add_definitions(-DARDUINO=10810)
add_definitions(-DARDUINO_ARCH_MBED)

#include_directories("${CMAKE_CURRENT_LIST_DIR}/include")
#include_directories("${CMAKE_CURRENT_LIST_DIR}/src")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/cores/arduino")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/cores/arduino/api/deprecated")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/variants/ARDUINO_NANO33BLE")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/Himax_HM01B0")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/KernelDebug/src")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/MRI/src")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/PDM/src")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/Portenta_Audio/src")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/Portenta_Camera")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/Portenta_SDRAM")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/Portenta_System")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/Portenta_Video")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/SPI")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/Scheduler/src")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/ThreadDebug/src")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/USBAudio")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/USBHID")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/USBHOST/src")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/USBMSD")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/WiFi/src")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/WiFiESP8266/src")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/WiFiODINW2/src")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/Wire")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/doom")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/openamp_arduino/src")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/rpclib/include")
#include_directories("$ENV{HOME}/.platformio/packages/framework-arduino-mbed/libraries/rpclib/src")
#include_directories("$ENV{HOME}/.platformio/packages/toolchain-gccarmnoneeabi/arm-none-eabi/include/c++/8.2.1")
#include_directories("$ENV{HOME}/.platformio/packages/toolchain-gccarmnoneeabi/arm-none-eabi/include/c++/8.2.1/arm-none-eabi")
#include_directories("$ENV{HOME}/.platformio/packages/toolchain-gccarmnoneeabi/lib/gcc/arm-none-eabi/8.2.1/include")
#include_directories("$ENV{HOME}/.platformio/packages/toolchain-gccarmnoneeabi/lib/gcc/arm-none-eabi/8.2.1/include-fixed")
#include_directories("$ENV{HOME}/.platformio/packages/toolchain-gccarmnoneeabi/arm-none-eabi/include")
#include_directories("$ENV{HOME}/.platformio/packages/tool-unity")

file(GLOB_RECURSE SOURCES "Core/*.*" "framework/*.*")

link_libraries(${CMAKE_SOURCE_DIR}/framework/ARDUINO_NANO33BLE/libs/libcc_310_core.a)
link_libraries(${CMAKE_SOURCE_DIR}/framework/ARDUINO_NANO33BLE/libs/libcc_310_ext.a)
link_libraries(${CMAKE_SOURCE_DIR}/framework/ARDUINO_NANO33BLE/libs/libcc_310_trng.a)
link_libraries(${CMAKE_SOURCE_DIR}/framework/ARDUINO_NANO33BLE/libs/libmbed.a)

set(LINKER_SCRIPT ${CMAKE_SOURCE_DIR}/framework/ARDUINO_NANO33BLE/linker_script.ld)

add_link_options(-DXIP_ENABLE=0)
add_link_options(-Wl,--gc-sections -Wl,--wrap,_calloc_r -Wl,--wrap,_free_r -Wl,--wrap,_malloc_r)
add_link_options(-Wl,--wrap,_memalign_r -Wl,--wrap,_realloc_r -Wl,--wrap,atexit -Wl,--wrap,exit)
add_link_options(-Wl,--wrap,main -Wl,-n -specs=nano.specs -specs=nosys.specs -lnosys)
add_link_options(-mcpu=cortex-m4 -mfloat-abi=softfp -mfpu=fpv4-sp-d16 -mthumb)
add_link_options(-Wl,-gc-sections,--print-memory-usage,-Map=${PROJECT_BINARY_DIR}/${PROJECT_NAME}.map)
add_link_options(-T ${LINKER_SCRIPT})

add_executable(${PROJECT_NAME}.elf ${SOURCES} ${LINKER_SCRIPT})

set(HEX_FILE ${PROJECT_BINARY_DIR}/${PROJECT_NAME}.hex)
set(BIN_FILE ${PROJECT_BINARY_DIR}/${PROJECT_NAME}.bin)

add_custom_command(TARGET ${PROJECT_NAME}.elf POST_BUILD
        COMMAND ${CMAKE_OBJCOPY} -Oihex $<TARGET_FILE:${PROJECT_NAME}.elf> ${HEX_FILE}
        COMMAND ${CMAKE_OBJCOPY} -Obinary $<TARGET_FILE:${PROJECT_NAME}.elf> ${BIN_FILE}
        COMMENT "Building ${HEX_FILE}
Building ${BIN_FILE}")